<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor">
    <ImageView
            android:id="@+id/return_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/return_icon"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_new_card"
        android:fontFamily="@font/lora_bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <FrameLayout
            android:layout_width="360dp"
            android:layout_height="206dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/rounded_corner"
            >

            <TextView
                android:layout_width="93dp"
                android:layout_height="31dp"
                android:layout_gravity="center"
                android:text="@string/preview_card"
                android:fontFamily="@font/lora_medium"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="24sp">

            </TextView>
        </FrameLayout>
        <EditText
                android:id="@+id/card_number"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_corner"
                android:textSize="16sp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/white"
                android:hint="@string/card_number"
                android:textColorHint="@color/white"
                android:fontFamily="@font/lora_medium"
                android:digits="0123456789"
                android:inputType="phone"/>
        <EditText
                android:id="@+id/bank_name"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner"
            android:textSize="16sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            android:hint="@string/name_of_bank"
            android:textColorHint="@color/white"
            android:fontFamily="@font/lora_medium"
            android:inputType="text"/>
        <EditText
                android:id="@+id/cardholder_name"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            android:textSize="16sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            android:hint="@string/cardholder_name"
            android:textColorHint="@color/white"
            android:fontFamily="@font/lora_medium"
            android:inputType="text"/>
        <EditText
                android:id="@+id/card_name"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            android:textSize="16sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            android:hint="@string/card_name"
            android:textColorHint="@color/white"
            android:fontFamily="@font/lora_medium"
            android:inputType="text"/>
        <EditText
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            android:textSize="16sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
                android:inputType="date"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
            android:hint="@string/expiration_date"
                android:visibility="gone"
            android:textColorHint="@color/white"
            android:fontFamily="@font/lora_medium"/>
        <EditText
                android:id="@+id/cvc_code"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            android:textSize="16sp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            android:hint="@string/cvc_code"
            android:textColorHint="@color/white"
            android:fontFamily="@font/lora_medium"
            android:inputType="numberSigned"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_corner"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/visa_card"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/white"
            android:fontFamily="@font/lora_medium"
            android:textSize="16sp"
                android:visibility="gone"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:background="@null"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.520">

            <AutoCompleteTextView
                android:popupBackground="@color/menuColor"
                android:dropDownVerticalOffset="-10dp"
                android:id="@+id/auto_complete_txt"
                android:layout_width="match_parent"
                android:dropDownHeight="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/lora_medium"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/white"
                android:inputType="none"
                android:text="@string/card_design"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/button"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/lora_bold"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/add_new_card"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="8dp"
                app:layout_constraintVertical_bias="0.8" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>