<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor">
    <ImageView
            android:id="@+id/return_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/return_icon"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="256dp"
        android:layout_height="45dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/lora_bold"
        android:gravity="center"
        android:text="@string/new_piggy"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/lora_medium"
        android:gravity="center"
        android:text="@string/new_piggy_description"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="192dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_marginTop="28dp"
            android:layout_width="380dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/purpose_icon"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"/>
            <EditText
                    android:id="@+id/purpose_field"
                android:layout_width="300dp"
                android:layout_height="34dp"
                android:hint="@string/purpose_field"
                    android:inputType="text"
                    android:background="@color/menuColor"
                    android:textColorHint="@color/white"
                android:fontFamily="@font/lora_medium"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginStart="72dp"
                android:layout_marginTop="16dp"/>
        </FrameLayout>
        <FrameLayout
            android:layout_marginTop="28dp"
            android:layout_width="380dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/banknote_icon"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"/>
            <EditText
                android:id="@+id/goal_field"
                android:layout_width="300dp"
                android:layout_height="34dp"
                    android:hint="@string/goal_field"
                    android:background="@color/menuColor"
                    android:textColorHint="@color/white"
                    android:inputType="number|numberDecimal"
                android:fontFamily="@font/lora_medium"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginStart="72dp"
                android:layout_marginTop="16dp"/>
        </FrameLayout>
        <FrameLayout
            android:layout_marginTop="28dp"
            android:layout_width="380dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/percentage_icon"
                android:layout_marginStart="16dp"
                android:layout_marginTop="9dp"/>
            <EditText
                android:id="@+id/percentage_field"
                android:layout_width="300dp"
                android:layout_height="34dp"
                    android:hint="@string/percentage_field"
                    android:background="@color/menuColor"
                    android:textColorHint="@color/white"
                    android:inputType="number"
                android:fontFamily="@font/lora_medium"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginStart="72dp"
                android:layout_marginTop="16dp"/>
        </FrameLayout>

        <Button
                android:id="@+id/button"
                android:layout_width="380dp"
                android:layout_height="60dp"
                android:backgroundTint="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/lora_bold"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/new_piggy"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="8dp"
                app:layout_constraintVertical_bias="0.8" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>